Created and working on section 1.1

--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "398053ef",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
      "text": [
       "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
       "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\clayt\\AppData\\Local\\Temp\\ipykernel_15808\\1813290752.py:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\clayt\\AppData\\Local\\Temp\\ipykernel_15808\\4251896938.py:2: SyntaxWarning: invalid escape sequence '\\d'\n",
       "  file_path = 'data\\data_banknote_authentication.txt'\n"
      ]
     }
@@ -71,19 +71,52 @@
     "# Create file path for data and print head\n",
     "file_path = 'data\\data_banknote_authentication.txt'\n",
     "if os.path.exists(file_path):\n",
+    "    # Read and print df\n",
     "    df = pd.read_csv(file_path)\n",
     "    print(df.head(10))\n",
     "else:\n",
     "    print(f\"File {file_path} does not exist.\")\n",
-    "\n",
-    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e7bafa9",
+   "metadata": {},
+   "source": [
+    "### Section 1.1 Check for missing values and display summary statitistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "8cbe14e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing Values in each Column:\n",
+      "variance     0\n",
+      "skewness     0\n",
+      "curtiosis    0\n",
+      "entropy      0\n",
+      "class        0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for missing values and display summary statistics\n",
+    "missing_values = df.isnull().sum()\n",
+    "print(f\"Missing Values in each Column:\\n{missing_values}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cbe14e7",
+   "id": "c7c99c1a",
    "metadata": {},
    "outputs": [],
    "source": []
