Adjusts section titles and working on 1.2

--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -20,6 +20,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c0c9b4c0",
+   "metadata": {},
+   "source": [
+    "### Section 1.1 Import modules and inspect first 10 rows"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "97f61b80",
@@ -84,7 +92,7 @@
    "id": "1e7bafa9",
    "metadata": {},
    "source": [
-    "### Section 1.1 Check for missing values and display summary statitistics"
+    "### Section 1.2 Check for missing values and display summary statitistics"
    ]
   },
   {
