--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "8cbe14e7",
    "metadata": {},
    "outputs": [
@@ -111,14 +111,28 @@
       "curtiosis    0\n",
       "entropy      0\n",
       "class        0\n",
-      "dtype: int64\n"
+      "dtype: int64\n",
+      "Summary Statistics:\n",
+      "          variance     skewness    curtiosis      entropy        class\n",
+      "count  1372.000000  1372.000000  1372.000000  1372.000000  1372.000000\n",
+      "mean      0.433735     1.922353     1.397627    -1.191657     0.444606\n",
+      "std       2.842763     5.869047     4.310030     2.101013     0.497103\n",
+      "min      -7.042100   -13.773100    -5.286100    -8.548200     0.000000\n",
+      "25%      -1.773000    -1.708200    -1.574975    -2.413450     0.000000\n",
+      "50%       0.496180     2.319650     0.616630    -0.586650     0.000000\n",
+      "75%       2.821475     6.814625     3.179250     0.394810     1.000000\n",
+      "max       6.824800    12.951600    17.927400     2.449500     1.000000\n"
      ]
     }
    ],
    "source": [
-    "# Check for missing values and display summary statistics\n",
+    "# Check for missing values\n",
     "missing_values = df.isnull().sum()\n",
-    "print(f\"Missing Values in each Column:\\n{missing_values}\")"
+    "print(f\"Missing Values in each Column:\\n{missing_values}\")\n",
+    "\n",
+    "# Generate summary statistics\n",
+    "summary_stats = df.describe()\n",
+    "print (f\"Summary Statistics:\\n{summary_stats}\")"
    ]
   },
   {
