--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -136,6 +136,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec945d85",
+   "metadata": {},
+   "source": [
+    "### Reflection 1:\n",
+    "- What do you notice about the dataset? Are there any data issues? I notice that there are no null values and that the dataset is primarily float numbers except class which are integers. I can see it is a rather large dataset with 1372 rows. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c7c99c1a",
