--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "id": "97f61b80",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "id": "398053ef",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "id": "8cbe14e7",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "id": "c80f2da4",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "id": "fdce24b3",
    "metadata": {},
    "outputs": [
@@ -258,13 +258,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "c455e0cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Outliers: 36\n",
+      "      variance  skewness  curtiosis  entropy  class\n",
+      "45    -0.78690    9.5663  -3.786700 -7.50340      0\n",
+      "47    -0.78690    9.5663  -3.786700 -7.50340      0\n",
+      "194   -2.34100   12.3784   0.704030 -7.58360      0\n",
+      "202   -0.78689    9.5663  -3.786700 -7.50340      0\n",
+      "291   -2.21530   11.9625   0.078538 -7.78530      0\n",
+      "394   -2.26230   12.1177   0.288460 -7.75810      0\n",
+      "465   -2.69890   12.1984   0.676610 -8.54820      0\n",
+      "529   -1.38850   12.5026   0.691180 -7.54870      0\n",
+      "562   -2.46040   12.7302   0.917380 -7.64180      0\n",
+      "581   -1.96670   11.8052  -0.404720 -7.87190      0\n",
+      "740   -2.44730   12.6247   0.735730 -7.66120      0\n",
+      "765   -3.84830  -12.8047  15.682400 -1.28100      1\n",
+      "820   -4.00250  -13.4979  17.677200 -3.32020      1\n",
+      "826   -4.21100  -12.4736  14.970400 -1.38840      1\n",
+      "881   -4.48610  -13.2889  17.308700 -3.21940      1\n",
+      "887   -3.26920  -12.7406  15.557300 -0.14182      1\n",
+      "942   -3.37930  -13.7731  17.927400 -2.03230      1\n",
+      "948   -3.49170  -12.1736  14.368900 -0.61639      1\n",
+      "974   -5.03010    7.5032  -0.133960 -7.50340      1\n",
+      "1003  -3.82030  -13.0551  16.958300 -2.30520      1\n",
+      "1009  -3.57130  -12.4922  14.888100 -0.47027      1\n",
+      "1064  -3.69610  -13.6779  17.579500 -2.61810      1\n",
+      "1070  -3.14230  -13.0365  15.677300 -0.66165      1\n",
+      "1125  -3.59850  -13.6593  17.605200 -2.49270      1\n",
+      "1131  -4.02140  -12.8006  15.619900 -0.95647      1\n",
+      "1142  -6.57730    6.8017   0.854830 -7.53440      1\n",
+      "1186  -4.24400  -13.0634  17.111600 -2.80170      1\n",
+      "1192  -4.40180  -12.9371  15.655900 -1.68060      1\n",
+      "1203  -6.73870    6.9879   0.678330 -7.58870      1\n",
+      "1218  -5.44140    7.2363   0.109380 -7.56420      1\n",
+      "1247  -4.47750  -13.0303  17.083400 -3.03450      1\n",
+      "1253  -4.55310  -12.5854  15.441700 -1.49830      1\n",
+      "1264  -6.65100    6.7934   0.686040 -7.58870      1\n",
+      "1308  -4.63380  -12.7509  16.716600 -3.21680      1\n",
+      "1314  -3.50600  -12.5667  15.160600 -0.75216      1\n",
+      "1369  -3.75030  -13.4586  17.593200 -2.77710      1\n"
+     ]
+    }
+   ],
    "source": [
     "# Check for skewness and outliers using Z-scores\n",
-    "from scipy.stats"
+    "z_scores = zscore(df)\n",
+    "outliers = (abs(z_scores) > 3).any(axis=1)\n",
+    "\n",
+    "# Display outliers\n",
+    "outlier_rows = df[outliers]\n",
+    "print(f\"Number of Outliers: {len(outlier_rows)}\")\n",
+    "print(outlier_rows)"
    ]
   },
   {
@@ -273,6 +324,14 @@
    "metadata": {},
    "source": [
     "### Section 2.2 Handle missing values and clean data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17085078",
+   "metadata": {},
+   "source": [
+    "There are no missing values, no categorical data and only 36 outliers out of the 1372 rows of data. I think it would be beneficial to keep those outliers so it will not skew any results."
    ]
   },
   {
