Created new features in 2.3

--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 91,
    "id": "97f61b80",
    "metadata": {},
    "outputs": [
@@ -60,6 +60,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
+    "\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
     "from scipy.stats import zscore\n",
     "from ucimlrepo import fetch_ucirepo \n",
     "  \n",
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 92,
    "id": "398053ef",
    "metadata": {},
    "outputs": [
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 93,
    "id": "8cbe14e7",
    "metadata": {},
    "outputs": [
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 94,
    "id": "c80f2da4",
    "metadata": {},
    "outputs": [
@@ -208,7 +210,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -232,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 95,
    "id": "fdce24b3",
    "metadata": {},
    "outputs": [
@@ -258,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 96,
    "id": "c455e0cb",
    "metadata": {},
    "outputs": [
@@ -335,14 +337,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7c99c1a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "e635874d",
    "metadata": {},
@@ -351,10 +345,34 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ec61dbb4",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8daac487",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# Create new features\n",
+    "\n",
+    "# New Feature 1: A feature that is an interaction between variance and skewness\n",
+    "df['variance_skewness_interaction'] =df['variance'] * df['skewness']\n",
+    "\n",
+    "# New Feature 2: Polynomial of skewness\n",
+    "poly = PolynomialFeatures(degree=2, include_bias=False)\n",
+    "df_poly = poly.fit_transform(df[['skewness']])\n",
+    "df_poly_columns = poly.get_feature_names_out(['skewness'])\n",
+    "df_poly_df = pd.DataFrame(df_poly, columns=df_poly_columns)\n",
+    "df = pd.concat([df, df_poly_df], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f9bc340",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scale and normalize data"
+   ]
   }
  ],
  "metadata": {
