--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 125,
    "id": "97f61b80",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,8 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler, PolynomialFeatures, MinMaxScaler\n",
     "from scipy.stats import zscore\n",
     "from ucimlrepo import fetch_ucirepo \n",
     "  \n",
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 126,
    "id": "398053ef",
    "metadata": {},
    "outputs": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 127,
    "id": "8cbe14e7",
    "metadata": {},
    "outputs": [
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 128,
    "id": "c80f2da4",
    "metadata": {},
    "outputs": [
@@ -210,7 +211,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 129,
    "id": "fdce24b3",
    "metadata": {},
    "outputs": [
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 130,
    "id": "c455e0cb",
    "metadata": {},
    "outputs": [
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "8daac487",
    "metadata": {},
    "outputs": [],
@@ -354,13 +355,15 @@
     "# Create new features\n",
     "\n",
     "# New Feature 1: A feature that is an interaction between variance and skewness\n",
-    "df['variance_skewness_interaction'] =df['variance'] * df['skewness']\n",
+    "df['var_skew_interaction'] =df['variance'] * df['skewness']\n",
     "\n",
     "# New Feature 2: Polynomial of skewness\n",
     "poly = PolynomialFeatures(degree=2, include_bias=False)\n",
     "df_poly = poly.fit_transform(df[['skewness']])\n",
     "df_poly_columns = poly.get_feature_names_out(['skewness'])\n",
     "df_poly_df = pd.DataFrame(df_poly, columns=df_poly_columns)\n",
+    "# Drop the duplicated 'skewness' column if already in df\n",
+    "df_poly_df = df_poly_df.drop(columns=['skewness'])\n",
     "df = pd.concat([df, df_poly_df], axis=1)"
    ]
   },
@@ -369,10 +372,57 @@
    "execution_count": null,
    "id": "7f9bc340",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   variance  skewness  curtiosis  entropy  class  var_skew_interaction  \\\n",
+      "0   3.62160    8.6661    -2.8073 -0.44699      0             31.385148   \n",
+      "1   4.54590    8.1674    -2.4586 -1.46210      0             37.128184   \n",
+      "2   3.86600   -2.6383     1.9242  0.10645      0            -10.199668   \n",
+      "3   3.45660    9.5228    -4.0112 -3.59440      0             32.916510   \n",
+      "4   0.32924   -4.4552     4.5718 -0.98880      0             -1.466830   \n",
+      "\n",
+      "   skewness^2  \n",
+      "0   75.101289  \n",
+      "1   66.706423  \n",
+      "2    6.960627  \n",
+      "3   90.683720  \n",
+      "4   19.848807  \n"
+     ]
+    }
+   ],
    "source": [
-    "# Scale and normalize data"
+    "# Scale and normalize data\n",
+    "\n",
+    "# Standardization (Z-score scaling)\n",
+    "scaler = StandardScaler()\n",
+    "df_scaled = df.copy()\n",
+    "df_scaled[['variance', 'skewness', 'curtiosis', 'entropy']] = scaler.fit_transform(df_scaled[['variance', 'skewness', 'curtiosis', 'entropy']])\n",
+    "\n",
+    "# Normalization (Min-Max scaling)\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "min_max_scaler = MinMaxScaler()\n",
+    "df_normalized = df.copy()\n",
+    "df_normalized[['variance', 'skewness', 'curtiosis', 'entropy']] = min_max_scaler.fit_transform(df_normalized[['variance', 'skewness', 'curtiosis', 'entropy']])\n",
+    "\n",
+    "print(df.head())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "617a4b81",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3282298",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
