--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -414,7 +414,13 @@
    "cell_type": "markdown",
    "id": "617a4b81",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Reflection 2\n",
+    "- What pattern onomolies od you see? I did not see really many anomolies. I found around 36 total outliers. Hopefully graphing these regression will showcase more and give me better insights. \n",
+    "- Do any features stand out? Variance and skewness I am very curious about var_skew_interaction since I am curious on how those two interplay with each other.\n",
+    "- What preprocessing steps were necessary to clean and improve the data? The data was actually very clean. I did not have to do much to it. I changed a few things and created some new features so I could gather more insights. \n",
+    "- Did you create or modify any features to improve performance? Yes I created a polynomial of skewness and a variance/skew interaction feature."
+   ]
   },
   {
    "cell_type": "code",
