Working on section 3

--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -423,12 +423,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3c06bd8",
+   "metadata": {},
+   "source": [
+    "## Section 3: Feature Selection and Justification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0130cfaf",
+   "metadata": {},
+   "source": [
+    "### Section 3.1 Choose Features and Target"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5a0c2d6",
+   "metadata": {},
+   "source": [
+    "##### The target variable(y)will be class. It is a categorical variable that indicates whether a banknote is genuine(0) or fake (1)\n",
+    "\n",
+    "##### The selected features(X):\n",
+    "- variance: wavelet image variance\n",
+    "- skewness: skewness of the image wavelet distribution\n",
+    "- var_skew_interaction: capture the relationship between var and skew (Non-linear)\n",
+    "- skewness^2: for models that are not inherently non-linear"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f3282298",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define X and y\n",
+    "X = df ['variance', skewness]"
+   ]
   }
  ],
  "metadata": {
