assign X and y variables for 4 cases

--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 2,
    "id": "97f61b80",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 3,
    "id": "398053ef",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
      "text": [
       "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
       "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\clayt\\AppData\\Local\\Temp\\ipykernel_15808\\722488926.py:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\clayt\\AppData\\Local\\Temp\\ipykernel_15260\\722488926.py:2: SyntaxWarning: invalid escape sequence '\\d'\n",
       "  file_path = 'data\\data_banknote_authentication.txt'\n"
      ]
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "id": "8cbe14e7",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 5,
    "id": "c80f2da4",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 6,
    "id": "fdce24b3",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 7,
    "id": "c455e0cb",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 8,
    "id": "8daac487",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7f9bc340",
    "metadata": {},
    "outputs": [
@@ -454,14 +454,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f3282298",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define X and y\n",
-    "X = df ['variance', skewness]"
+    "# Define Case 1: variance \n",
+    "X1 = df[['variance']]\n",
+    "y1 = df['class']\n",
+    "\n",
+    "# Define Case 2: skewness\n",
+    "X2 = df[['skewness']]\n",
+    "y2 = df['class']\n",
+    "\n",
+    "X3 = df[['var_skew_interaction']]\n",
+    "y3 = df['class']\n",
+    "\n",
+    "X4 = df[['skewness^2']]\n",
+    "y4 = df['class']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1a000cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
