--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "97f61b80",
    "metadata": {},
    "outputs": [
@@ -60,12 +60,15 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "\n",
-    "\n",
-    "from sklearn.preprocessing import StandardScaler, PolynomialFeatures, MinMaxScaler\n",
     "from scipy.stats import zscore\n",
     "from ucimlrepo import fetch_ucirepo \n",
-    "  \n",
+    "\n",
+    "# sklearn modules\n",
+    "from sklearn.preprocessing import StandardScaler, PolynomialFeatures, MinMaxScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, classification_report\n",
+    "\n",
     "# fetch dataset \n",
     "banknote_authentication = fetch_ucirepo(id=267) \n",
     "  \n",
