Define evaluate function

--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -488,7 +488,12 @@
    "id": "c1a000cd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def evaluate_feature_case(X, y, case_name=\"Feature Case\"):\n",
+    "    # Split data\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
