--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "97f61b80",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "398053ef",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
      "text": [
       "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
       "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\clayt\\AppData\\Local\\Temp\\ipykernel_15260\\722488926.py:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\clayt\\AppData\\Local\\Temp\\ipykernel_15124\\722488926.py:2: SyntaxWarning: invalid escape sequence '\\d'\n",
       "  file_path = 'data\\data_banknote_authentication.txt'\n"
      ]
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "8cbe14e7",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "c80f2da4",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "fdce24b3",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "c455e0cb",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "8daac487",
    "metadata": {},
    "outputs": [],
@@ -372,22 +372,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "7f9bc340",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"['curtiosis'] not in index\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m scaler = StandardScaler()\n\u001b[32m      5\u001b[39m df_scaled = df.copy()\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m df_scaled[[\u001b[33m'\u001b[39m\u001b[33mvariance\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mskewness\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcurtiosis\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mentropy\u001b[39m\u001b[33m'\u001b[39m]] = scaler.fit_transform(\u001b[43mdf_scaled\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mvariance\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mskewness\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcurtiosis\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mentropy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# Normalization (Min-Max scaling)\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MinMaxScaler\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\clayt\\Documents\\ml_classification_seabaugh\\.venv\\Lib\\site-packages\\pandas\\core\\frame.py:4108\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[32m   4107\u001b[39m         key = \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[32m-> \u001b[39m\u001b[32m4108\u001b[39m     indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcolumns\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[32m1\u001b[39m]\n\u001b[32m   4110\u001b[39m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[32m   4111\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[33m\"\u001b[39m\u001b[33mdtype\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) == \u001b[38;5;28mbool\u001b[39m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\clayt\\Documents\\ml_classification_seabaugh\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6200\u001b[39m, in \u001b[36mIndex._get_indexer_strict\u001b[39m\u001b[34m(self, key, axis_name)\u001b[39m\n\u001b[32m   6197\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   6198\u001b[39m     keyarr, indexer, new_indexer = \u001b[38;5;28mself\u001b[39m._reindex_non_unique(keyarr)\n\u001b[32m-> \u001b[39m\u001b[32m6200\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   6202\u001b[39m keyarr = \u001b[38;5;28mself\u001b[39m.take(indexer)\n\u001b[32m   6203\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[32m   6204\u001b[39m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\clayt\\Documents\\ml_classification_seabaugh\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6252\u001b[39m, in \u001b[36mIndex._raise_if_missing\u001b[39m\u001b[34m(self, key, indexer, axis_name)\u001b[39m\n\u001b[32m   6249\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m]\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   6251\u001b[39m not_found = \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask.nonzero()[\u001b[32m0\u001b[39m]].unique())\n\u001b[32m-> \u001b[39m\u001b[32m6252\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m not in index\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mKeyError\u001b[39m: \"['curtiosis'] not in index\""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   variance  skewness  curtosis  entropy  class  var_skew_interaction  \\\n",
+      "0   3.62160    8.6661   -2.8073 -0.44699      0             31.385148   \n",
+      "1   4.54590    8.1674   -2.4586 -1.46210      0             37.128184   \n",
+      "2   3.86600   -2.6383    1.9242  0.10645      0            -10.199668   \n",
+      "3   3.45660    9.5228   -4.0112 -3.59440      0             32.916510   \n",
+      "4   0.32924   -4.4552    4.5718 -0.98880      0             -1.466830   \n",
+      "\n",
+      "   skewness^2  \n",
+      "0   75.101289  \n",
+      "1   66.706423  \n",
+      "2    6.960627  \n",
+      "3   90.683720  \n",
+      "4   19.848807  \n"
      ]
     }
    ],
@@ -397,13 +402,13 @@
     "# Standardization (Z-score scaling)\n",
     "scaler = StandardScaler()\n",
     "df_scaled = df.copy()\n",
-    "df_scaled[['variance', 'skewness', 'curtiosis', 'entropy']] = scaler.fit_transform(df_scaled[['variance', 'skewness', 'curtiosis', 'entropy']])\n",
+    "df_scaled[['variance', 'skewness', 'curtosis', 'entropy']] = scaler.fit_transform(df_scaled[['variance', 'skewness', 'curtosis', 'entropy']])\n",
     "\n",
     "# Normalization (Min-Max scaling)\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "min_max_scaler = MinMaxScaler()\n",
     "df_normalized = df.copy()\n",
-    "df_normalized[['variance', 'skewness', 'curtiosis', 'entropy']] = min_max_scaler.fit_transform(df_normalized[['variance', 'skewness', 'curtiosis', 'entropy']])\n",
+    "df_normalized[['variance', 'skewness', 'curtosis', 'entropy']] = min_max_scaler.fit_transform(df_normalized[['variance', 'skewness', 'curtosis', 'entropy']])\n",
     "\n",
     "print(df.head())"
    ]
@@ -452,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "f3282298",
    "metadata": {},
    "outputs": [],
@@ -483,16 +488,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b007d56",
+   "metadata": {},
+   "source": [
+    "## Section 4 Train a Model (Logistic Regression)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4dbd53f",
+   "metadata": {},
+   "source": [
+    "### 4.1/4.2 Split the data and train the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c1a000cd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create function to evaluate each case\n",
     "def evaluate_feature_case(X, y, case_name=\"Feature Case\"):\n",
     "    # Split data\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
-    "\n"
+    "    \n",
+    "    # Train the log regression model\n",
+    "    logr_model = LogisticRegression()\n",
+    "    logr_model.fit(X_train, y_train)\n",
+    "\n",
+    "    # Predictions\n",
+    "    y_pred = logr_model.predict(X_test)\n",
+    "\n",
+    "    # Evaluation metrics\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred)\n",
+    "    recall = recall_score(y_test, y_pred)\n",
+    "    f1 = f1_score(y_test, y_pred)\n",
+    "    conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "    # Display\n",
+    "    print(f\"\\n {case_name}\")\n",
+    "    print(\"-----------------\")\n",
+    "    print(\"Accuracy :\", accuracy)\n",
+    "    print(\"Precision :\", precision)\n",
+    "    print(\"Recall :\", recall)\n",
+    "    print(\"F1 Score :\", f1)\n",
+    "    print(\"Confusion Matrix:\\n\", conf_matrix)"
    ]
   }
  ],
