removed skewness^2 and added a combination of all features

--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "id": "97f61b80",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "id": "398053ef",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "id": "8cbe14e7",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "id": "c80f2da4",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "id": "fdce24b3",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "id": "c455e0cb",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "id": "8daac487",
    "metadata": {},
    "outputs": [],
@@ -358,21 +358,12 @@
     "# Create new features\n",
     "\n",
     "# New Feature 1: A feature that is an interaction between variance and skewness\n",
-    "df['var_skew_interaction'] =df['variance'] * df['skewness']\n",
-    "\n",
-    "# New Feature 2: Polynomial of skewness\n",
-    "poly = PolynomialFeatures(degree=2, include_bias=False)\n",
-    "df_poly = poly.fit_transform(df[['skewness']])\n",
-    "df_poly_columns = poly.get_feature_names_out(['skewness'])\n",
-    "df_poly_df = pd.DataFrame(df_poly, columns=df_poly_columns)\n",
-    "# Drop the duplicated 'skewness' column if already in df\n",
-    "df_poly_df = df_poly_df.drop(columns=['skewness'])\n",
-    "df = pd.concat([df, df_poly_df], axis=1)"
+    "df['var_skew_interaction'] = df['variance'] * df['skewness']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "id": "7f9bc340",
    "metadata": {},
    "outputs": [
@@ -380,19 +371,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   variance  skewness  curtosis  entropy  class  var_skew_interaction  \\\n",
-      "0   3.62160    8.6661   -2.8073 -0.44699      0             31.385148   \n",
-      "1   4.54590    8.1674   -2.4586 -1.46210      0             37.128184   \n",
-      "2   3.86600   -2.6383    1.9242  0.10645      0            -10.199668   \n",
-      "3   3.45660    9.5228   -4.0112 -3.59440      0             32.916510   \n",
-      "4   0.32924   -4.4552    4.5718 -0.98880      0             -1.466830   \n",
-      "\n",
-      "   skewness^2  \n",
-      "0   75.101289  \n",
-      "1   66.706423  \n",
-      "2    6.960627  \n",
-      "3   90.683720  \n",
-      "4   19.848807  \n"
+      "   variance  skewness  curtosis  entropy  class  var_skew_interaction\n",
+      "0   3.62160    8.6661   -2.8073 -0.44699      0             31.385148\n",
+      "1   4.54590    8.1674   -2.4586 -1.46210      0             37.128184\n",
+      "2   3.86600   -2.6383    1.9242  0.10645      0            -10.199668\n",
+      "3   3.45660    9.5228   -4.0112 -3.59440      0             32.916510\n",
+      "4   0.32924   -4.4552    4.5718 -0.98880      0             -1.466830\n"
      ]
     }
    ],
@@ -457,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "id": "f3282298",
    "metadata": {},
    "outputs": [],
@@ -471,10 +455,7 @@
     "y2 = df['class']\n",
     "\n",
     "X3 = df[['var_skew_interaction']]\n",
-    "y3 = df['class']\n",
-    "\n",
-    "X4 = df[['skewness^2']]\n",
-    "y4 = df['class']"
+    "y3 = df['class']\n"
    ]
   },
   {
@@ -505,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "c1a000cd",
    "metadata": {},
    "outputs": [],
@@ -529,7 +510,7 @@
     "    f1 = f1_score(y_test, y_pred)\n",
     "    conf_matrix = confusion_matrix(y_test, y_pred)\n",
     "\n",
-    "    # Display\n",
+    "    # Display Classification performance\n",
     "    print(f\"\\n {case_name}\")\n",
     "    print(\"-----------------\")\n",
     "    print(\"Accuracy :\", accuracy)\n",
@@ -538,6 +519,93 @@
     "    print(\"F1 Score :\", f1)\n",
     "    print(\"Confusion Matrix:\\n\", conf_matrix)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "74d47719",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Case 1: Variance\n",
+      "-----------------\n",
+      "Accuracy : 0.8618181818181818\n",
+      "Precision : 0.8387096774193549\n",
+      "Recall : 0.8524590163934426\n",
+      "F1 Score : 0.8455284552845529\n",
+      "Confusion Matrix:\n",
+      " [[133  20]\n",
+      " [ 18 104]]\n",
+      "\n",
+      " Case 2: Skewness\n",
+      "-----------------\n",
+      "Accuracy : 0.6690909090909091\n",
+      "Precision : 0.6565656565656566\n",
+      "Recall : 0.5327868852459017\n",
+      "F1 Score : 0.5882352941176471\n",
+      "Confusion Matrix:\n",
+      " [[119  34]\n",
+      " [ 57  65]]\n",
+      "\n",
+      " Case 3: Var * Skew Interaction\n",
+      "-----------------\n",
+      "Accuracy : 0.5563636363636364\n",
+      "Precision : 0.5\n",
+      "Recall : 0.13114754098360656\n",
+      "F1 Score : 0.2077922077922078\n",
+      "Confusion Matrix:\n",
+      " [[137  16]\n",
+      " [106  16]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Case 1: variance\n",
+    "evaluate_feature_case(X1, y1, case_name=\"Case 1: Variance\")\n",
+    "\n",
+    "# Case 2: skewness\n",
+    "evaluate_feature_case(X2, y2, case_name=\"Case 2: Skewness\")\n",
+    "\n",
+    "# Case 3: var_skew_interaction\n",
+    "evaluate_feature_case(X3, y3, case_name=\"Case 3: Var * Skew Interaction\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e37463d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['variance', 'skewness', 'curtosis', 'entropy', 'class',\n",
+      "       'var_skew_interaction'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Combine all features to see evaluation\n",
+    "X_combo = df[['variance', 'skewness', 'var_skew_interaction']]\n",
+    "y_combo = df['class']\n",
+    "\n",
+    "evaluate_feature_case(X_combo, y_combo, case_name=\"Combo: Variance + Skewness + Interaction\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efad13f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
