Changed function name and completed reflection 4

--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -486,13 +486,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "c1a000cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create function to evaluate each case\n",
-    "def evaluate_feature_case(X, y, case_name=\"Feature Case\"):\n",
+    "def evaluate_feature_logr(X, y, case_name=\"Feature Case\"):\n",
     "    # Split data\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "    \n",
@@ -521,8 +521,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88c446f7",
+   "metadata": {},
+   "source": [
+    "### 4.3 Evaluate performance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "74d47719",
    "metadata": {},
    "outputs": [
@@ -565,13 +573,13 @@
    ],
    "source": [
     "# Case 1: variance\n",
-    "evaluate_feature_case(X1, y1, case_name=\"Case 1: Variance\")\n",
+    "evaluate_feature_logr(X1, y1, case_name=\"Case 1: Variance\")\n",
     "\n",
     "# Case 2: skewness\n",
-    "evaluate_feature_case(X2, y2, case_name=\"Case 2: Skewness\")\n",
+    "evaluate_feature_logr(X2, y2, case_name=\"Case 2: Skewness\")\n",
     "\n",
     "# Case 3: var_skew_interaction\n",
-    "evaluate_feature_case(X3, y3, case_name=\"Case 3: Var * Skew Interaction\")\n",
+    "evaluate_feature_logr(X3, y3, case_name=\"Case 3: Var * Skew Interaction\")\n",
     "\n"
    ]
   },
@@ -585,9 +593,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['variance', 'skewness', 'curtosis', 'entropy', 'class',\n",
-      "       'var_skew_interaction'],\n",
-      "      dtype='object')\n"
+      "\n",
+      " Combo: Variance + Skewness + Interaction\n",
+      "-----------------\n",
+      "Accuracy : 0.9054545454545454\n",
+      "Precision : 0.8870967741935484\n",
+      "Recall : 0.9016393442622951\n",
+      "F1 Score : 0.8943089430894309\n",
+      "Confusion Matrix:\n",
+      " [[139  14]\n",
+      " [ 12 110]]\n"
      ]
     }
    ],
@@ -596,7 +611,17 @@
     "X_combo = df[['variance', 'skewness', 'var_skew_interaction']]\n",
     "y_combo = df['class']\n",
     "\n",
-    "evaluate_feature_case(X_combo, y_combo, case_name=\"Combo: Variance + Skewness + Interaction\")\n"
+    "evaluate_feature_logr(X_combo, y_combo, case_name=\"Combo: Variance + Skewness + Interaction\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5adfd2a3",
+   "metadata": {},
+   "source": [
+    "### Reflection 4\n",
+    "- How well did the model perform? The model performed very well. It was interesting to see which of the features were the best predictor. Variance was the best individual; however, a combination of all three yielded great results. \n",
+    "- Any surprises in the results? I was surprised in how well the model performed with the combination of all three of the features. "
    ]
   },
   {
