Compare classifier results

--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "74d47719",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
     "plt.figure(figsize=(8, 6))\n",
     "sns.set(style=\"whitegrid\")\n",
     "\n",
-    "# Plot\n",
+    "# Variance vs Skewness Plot\n",
     "sns.scatterplot(\n",
     "    data=df,\n",
     "    x='variance',\n",
@@ -665,6 +665,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d333c836",
+   "metadata": {},
+   "source": [
+    "### 5.1 Train an Alternative Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 118,
    "id": "efad13f6",
@@ -701,8 +709,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0104cf95",
+   "metadata": {},
+   "source": [
+    "### 5.2 Compare performance of all cases and models"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "8ce97afc",
    "metadata": {},
    "outputs": [
@@ -739,25 +755,50 @@
       "F1 Score : 0.5175438596491229\n",
       "Confusion Matrix:\n",
       " [[106  47]\n",
-      " [ 63  59]]\n"
+      " [ 63  59]]\n",
+      "\n",
+      " Combo: Variance + Skewness + Interaction\n",
+      "-----------------\n",
+      "Accuracy : 0.9054545454545454\n",
+      "Precision : 0.8692307692307693\n",
+      "Recall : 0.9262295081967213\n",
+      "F1 Score : 0.8968253968253969\n",
+      "Confusion Matrix:\n",
+      " [[136  17]\n",
+      " [  9 113]]\n"
      ]
     }
    ],
    "source": [
-    "# Case 1: variance\n",
+    "# Compare Case 1: variance\n",
     "evaluate_feature_dectree(X1, y1, case_name=\"Case 1: Variance\")\n",
+    "evaluate_feature_logr(X1, y1, case_name=\"Case 1: Variance\")\n",
     "\n",
-    "# Case 2: skewness\n",
+    "# Compare Case 2: skewness\n",
     "evaluate_feature_dectree(X2, y2, case_name=\"Case 2: Skewness\")\n",
+    "evaluate_feature_logr(X2, y2, case_name=\"Case 2: Skewness\")\n",
     "\n",
-    "# Case 3: var_skew_interaction\n",
-    "evaluate_feature_dectree(X3, y3, case_name=\"Case 3: Var * Skew Interaction\")\n"
+    "# Compare Case 3: var_skew_interaction\n",
+    "evaluate_feature_dectree(X3, y3, case_name=\"Case 3: Var * Skew Interaction\")\n",
+    "evaluate_feature_logr(X3, y3, case_name=\"Case 3: Var * Skew Interaction\")\n",
+    "\n",
+    "# Compare Case 4: Combonation\n",
+    "evaluate_feature_dectree(X_combo, y_combo, case_name=\"Combo: Variance + Skewness + Interaction\")\n",
+    "evaluate_feature_logr(X_combo, y_combo, case_name=\"Combo: Variance + Skewness + Interaction\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "bd003bcb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "251833e7",
    "metadata": {},
    "outputs": [],
    "source": []
