Working on reflection 5

--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "8ce97afc",
    "metadata": {},
    "outputs": [
@@ -737,6 +737,16 @@
       " [[125  28]\n",
       " [ 24  98]]\n",
       "\n",
+      " Case 1: Variance\n",
+      "-----------------\n",
+      "Accuracy : 0.8618181818181818\n",
+      "Precision : 0.8387096774193549\n",
+      "Recall : 0.8524590163934426\n",
+      "F1 Score : 0.8455284552845529\n",
+      "Confusion Matrix:\n",
+      " [[133  20]\n",
+      " [ 18 104]]\n",
+      "\n",
       " Case 2: Skewness\n",
       "-----------------\n",
       "Accuracy : 0.7127272727272728\n",
@@ -746,6 +756,16 @@
       "Confusion Matrix:\n",
       " [[116  37]\n",
       " [ 42  80]]\n",
+      "\n",
+      " Case 2: Skewness\n",
+      "-----------------\n",
+      "Accuracy : 0.6690909090909091\n",
+      "Precision : 0.6565656565656566\n",
+      "Recall : 0.5327868852459017\n",
+      "F1 Score : 0.5882352941176471\n",
+      "Confusion Matrix:\n",
+      " [[119  34]\n",
+      " [ 57  65]]\n",
       "\n",
       " Case 3: Var * Skew Interaction\n",
       "-----------------\n",
@@ -757,6 +777,16 @@
       " [[106  47]\n",
       " [ 63  59]]\n",
       "\n",
+      " Case 3: Var * Skew Interaction\n",
+      "-----------------\n",
+      "Accuracy : 0.5563636363636364\n",
+      "Precision : 0.5\n",
+      "Recall : 0.13114754098360656\n",
+      "F1 Score : 0.2077922077922078\n",
+      "Confusion Matrix:\n",
+      " [[137  16]\n",
+      " [106  16]]\n",
+      "\n",
       " Combo: Variance + Skewness + Interaction\n",
       "-----------------\n",
       "Accuracy : 0.9054545454545454\n",
@@ -765,7 +795,17 @@
       "F1 Score : 0.8968253968253969\n",
       "Confusion Matrix:\n",
       " [[136  17]\n",
-      " [  9 113]]\n"
+      " [  9 113]]\n",
+      "\n",
+      " Combo: Variance + Skewness + Interaction\n",
+      "-----------------\n",
+      "Accuracy : 0.9054545454545454\n",
+      "Precision : 0.8870967741935484\n",
+      "Recall : 0.9016393442622951\n",
+      "F1 Score : 0.8943089430894309\n",
+      "Confusion Matrix:\n",
+      " [[139  14]\n",
+      " [ 12 110]]\n"
      ]
     }
    ],
@@ -788,19 +828,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd003bcb",
+   "cell_type": "markdown",
+   "id": "e3f287d3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Reflection 5 \n",
+    "- Which model performed better?\n",
+    "- Why might one classifier be more effective in this specific case?"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "251833e7",
+   "cell_type": "markdown",
+   "id": "154644e2",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
